--- a/test.ipynb
+++ b/test.ipynb
@@ -643,6 +643,21 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "def on_data_change(change):\n",
+        "    lbl_pred.value = ''\n",
+        "    img = PILImage.create(btn_upload.data[-1])\n",
+        "    out_pl.clear_output()\n",
+        "    with out_pl: display(img.to_thumb(128,128))\n",
+        "    pred,pred_idx,probs = learn_inf.predict(img)\n",
+        "    lbl_pred.value = f'Prediction: {pred}; Probability: {probs[pred_idx]:.04f}'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "btn_upload.observe(on_data_change, names=['data'])"
       ]
     },
